# Awladna

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  dump_all_files.py  init.sql  nginx.conf  package-lock.json
BackEnd/: .gitignore  main.py  pyproject.toml  start.py
BackEnd/Models/: audit_log.py  chat_log.py  child_profile.py  recommendation.py  settings.py  user.py
BackEnd/MongoModels/: user.py
BackEnd/Routes/: admin.py  analytics.py  auth.py  chat.py  child_profile.py  recommendation.py  settings.py
BackEnd/Schemas/: admin.py  analytics.py  chat.py  child.py  child_profile.py  feedback.py  settings.py
BackEnd/Tasks/: progress_email.py
BackEnd/Utils/: ai_integration.py  analytics.py  audit_logger.py  auth_utils.py  config.py  database.py  encryption.py  mongo_client.py  oauth2_email_form.py  oauth_utils.py  rate_limiter.py  recommendation_generator.py  redis.py  sanitization.py  secret_manager.py  security.py  token_store.py  translation.py
BackEnd/alembic/: env.py
BackEnd/alembic/versions/: b6a114632aG3_add_proper_tables.py
BackEnd/middleware/: security_headers.py
BackEnd/monitoring/: health.py
db/backups/: init.sql
docker/: postgres-init.sql
front_end/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
front_end/public/: service-worker.js
front_end/src/: App.tsx  main.tsx
front_end/src/__mocks__/: server.ts  useChat.test.ts
front_end/src/__tests__/: A11yAudit.test.tsx
front_end/src/api/: axiosInstance.ts  chat.ts
front_end/src/components/: ChildProfileForm.tsx  ErrorBoundary.tsx
(+48 files in other folders)
